# discordtestbot

./: copy.txt  main.py  pyproject.toml  stuff.json  upFile.py
