[tool.poetry]
name = "discordtestbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
inspiro = "^0.0.2"
replit = "^2.0.0"
flask = "^1.1.2"
openai = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
